--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,20 @@
-apply plugin: 'com.android.library'
-
-buildscript {
-    repositories {
-        google()
-        jcenter()
-        mavenCentral()
-        maven {
-            url "https://jitpack.io"
-        }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.3'
-    }
+plugins {
+    id 'com.android.library'
 }
+
+//buildscript {
+//    repositories {
+//        google()
+//        jcenter()
+//        mavenCentral()
+//        maven {
+//            url "https://jitpack.io"
+//        }
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:4.1.3'
+//    }
+//}
 
 
 android {
@@ -37,6 +39,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    buildFeatures{
+        viewBinding true
     }
 }
 
@@ -68,3 +74,4 @@ dependencies {
 
 
 }
+
