--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,15 +18,17 @@ plugins {
 
 
 android {
-    compileSdkVersion 32
+
+    compileSdkVersion 31
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
 
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        testApplicationId "com.securedemo.myapplication"
+//        testApplicationId "com.securedemo.myapplication"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
