--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-//        maven { url 'https://maven.google.com' }
+        maven { url 'https://maven.google.com' }
     }
 }
 
