--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    configurations.all {
+        resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
+    }
+
 //    buildFeatures{
 //        viewBinding true
 //    }
@@ -84,5 +88,16 @@ dependencies {
     implementation "com.airbnb.android:lottie:3.4.0"
 
 
+}
+
+task CaptureLibraryVersion {
+    def libDef = project.configurations.getByName('implementation').allDependencies.matching {
+        it.group.equals("com.github.RajSahajanand") && it.name.equals("Server-Network")
+    }
+    if (libDef.size() > 0) {
+        android.buildTypes.each {
+            it.buildConfigField 'String', 'LIB_VERSION', "\"${libDef[0].version}\""
+        }
+    }
 }
 
