--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'maven-publish'
+
 }
 
 //plugins {
@@ -90,14 +91,26 @@ dependencies {
 
 }
 
-task CaptureLibraryVersion {
-    def libDef = project.configurations.getByName('implementation').allDependencies.matching {
-        it.group.equals("com.github.RajSahajanand") && it.name.equals("Server-Network")
-    }
-    if (libDef.size() > 0) {
-        android.buildTypes.each {
-            it.buildConfigField 'String', 'LIB_VERSION', "\"${libDef[0].version}\""
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'com.github.RajSahajanand'
+            artifactId = 'library'
+            version = '1.0'
+
+//            from components.java
         }
     }
 }
+
+//task CaptureLibraryVersion {
+//    def libDef = project.configurations.getByName('implementation').allDependencies.matching {
+//        it.group.equals("com.github.RajSahajanand") && it.name.equals("Server-Network")
+//    }
+//    if (libDef.size() > 0) {
+//        android.buildTypes.each {
+//            it.buildConfigField 'String', 'LIB_VERSION', "\"${libDef[0].version}\""
+//        }
+//    }
+//}
 
