--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-//    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:sdk-core:4.0.0'
-//    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:hydra:4.0.0'
-//    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:openvpn:4.0.0'
+    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:sdk-core:3.6.4'
+    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:hydra:3.6.4'
+    implementation 'com.github.AnchorFreePartner.hydra-sdk-android:openvpn:3.6.4'
 
     //TODO : RETROFIT
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
