--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,8 @@
 //}
 
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
+    id 'maven'
 }
 
 
@@ -31,7 +32,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.securedemo.myapplication"
+//        applicationId "com.securedemo.myapplication"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
