--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 //plugins {
 //    id 'com.android.library'
 //    id 'maven-publish'
-//
 //}
 
 plugins {
     id 'com.android.library'
+//    id 'com.android.application'
     id 'maven'
 }
 
@@ -37,10 +37,9 @@ android {
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-//        testApplicationId "com.securedemo.myapplication"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
+//        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -90,18 +89,5 @@ dependencies {
 
     implementation "com.airbnb.android:lottie:3.4.0"
 
-
 }
-
-
-//task CaptureLibraryVersion {
-//    def libDef = project.configurations.getByName('implementation').allDependencies.matching {
-//        it.group.equals("com.github.RajSahajanand") && it.name.equals("Server-Network")
-//    }
-//    if (libDef.size() > 0) {
-//        android.buildTypes.each {
-//            it.buildConfigField 'String', 'LIB_VERSION', "\"${libDef[0].version}\""
-//        }
-//    }
-//}
 
